[gd_scene load_steps=6 format=3 uid="uid://dgsc3nyjgtctt"]

[ext_resource type="Script" path="res://Scripts/Prototypes/tile_system.gd" id="1_p6b7i"]
[ext_resource type="PackedScene" uid="uid://bamfqxvw65iu2" path="res://scenes/Prototypes/basic_tile.tscn" id="2_v81nx"]
[ext_resource type="TileSet" uid="uid://cloviblshkwle" path="res://resources/tiles/tile_set.tres" id="3_breaw"]
[ext_resource type="Theme" uid="uid://dundj1k3w6wi4" path="res://resources/UI/ButtonTheme.tres" id="4_7y8um"]
[ext_resource type="PackedScene" uid="uid://c65s74ie2kw7m" path="res://scenes/Components/highlight_component.tscn" id="5_uun75"]

[node name="TileSystem" type="Node2D" node_paths=PackedStringArray("tilemap", "tile_container")]
script = ExtResource("1_p6b7i")
tilemap = NodePath("TileMap")
basic_tile = ExtResource("2_v81nx")
tile_container = NodePath("GroundTiles")
quake_delay = null
sine_time = 1.0
transition_type = 4
ease_type = 1
highground_offset = null

[node name="HighlightComponent" parent="." node_paths=PackedStringArray("tilesystem") instance=ExtResource("5_uun75")]
highlight_color = Color(0.784314, 0.211765, 0.329412, 1)
tilesystem = NodePath("..")

[node name="GroundTiles" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-128, -64)
tile_set = ExtResource("3_breaw")
format = 2
layer_0/name = "base"
layer_0/tile_data = PackedInt32Array(-65536, 4, 0, -1, 4, 0, -131072, 4, 0, -196608, 4, 0, -262144, 4, 0, 0, 4, 0, 65536, 4, 0, 131072, 4, 0, 196608, 4, 0, 262144, 4, 0, -2, 4, 0, -65535, 4, 0, -65534, 4, 0, -262143, 4, 0, -196607, 4, 0, -131071, 4, 0, -131070, 4, 0, -196606, 4, 0, -196609, 4, 0, -131074, 4, 0, -65538, 4, 0, -131073, 4, 0, -65537, 4, 0, 65535, 4, 0, 131070, 4, 0, 65532, 4, 0, -3, 4, 0, 65533, 4, 0, 65534, 4, 0, 262142, 4, 0, 196607, 4, 0, 262143, 4, 0, 131071, 4, 0, 196606, 4, 0, 196609, 4, 0, 196610, 4, 0, 131074, 4, 0, 65538, 4, 0, 65537, 4, 0, 131073, 4, 0, 1, 4, 0, 4, 4, 0, 3, 4, 0, 2, 4, 0, -65533, 4, 0, -4, 4, 0, -65540, 4, 0, -65539, 4, 0, -131075, 4, 0, 65540, 4, 0, 65539, 4, 0, 131075, 4, 0, 131076, 4, 0, 131069, 4, 0, -131069, 4, 0, -65532, 4, 0, -131068, 4, 0, -196605, 4, 0, 131068, 4, 0, 196604, 4, 0, 196605, 4, 0)
layer_1/name = "elevation"
layer_1/tile_data = PackedInt32Array()

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.5
offset_top = -42.0
offset_right = 70.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="Spawn" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_7y8um")
text = "Spawn"

[node name="Earthquake" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_7y8um")
text = "Earthquake"

[node name="Disco" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_7y8um")
text = "Disco"

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Spawn" to="." method="_on_spawn_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Earthquake" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Disco" to="." method="_on_disco_pressed"]
